# strusModule

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYING  INSTALL  INSTALL.3rdParty  INSTALL.FreeBSD  INSTALL.OSX  INSTALL.OpenBSD  INSTALL.Ubuntu.md  LICENSE.3rdParty  README
.Attic/src/: utils.hpp
cmake/: build_rules.cmake
doc/: doxygen.conf  header.html
doc/doxygen/html/: analyzerModule_8hpp.html  analyzerModule_8hpp_source.html  annotated.html  classes.html  classstrus_1_1ModuleLoaderInterface-members.html  classstrus_1_1ModuleLoaderInterface.html  dir_4c7fe52541d540b59710786f705b50e0.html  dir_a73361def35442ed7e38ef668dbae29f.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.hhc  index.hhk  index.hhp  index.html  moduleEntryPoint_8hpp.html  moduleEntryPoint_8hpp_source.html  moduleLoaderInterface_8hpp.html  moduleLoaderInterface_8hpp_source.html  module_8hpp.html  module_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespacestrus.html  storageModule_8hpp.html  storageModule_8hpp_source.html  structstrus_1_1AggregatorConstructor-members.html  structstrus_1_1AggregatorConstructor.html  structstrus_1_1AnalyzerModule-members.html  structstrus_1_1AnalyzerModule.html  (+51 more)
doc/doxygen_include/: strus.md
include/strus/: analyzerModule.hpp  moduleAnalyzer.hpp  moduleEntryPoint.hpp  moduleLoader.hpp  moduleLoaderInterface.hpp  moduleStorage.hpp  moduleVersion.hpp.in  objectBuilderInterface.hpp  storageModule.hpp  strus.hpp  traceModule.hpp  versionModule.hpp  versionModule.hpp.in
include/strus/lib/: module.hpp
src/: CMakeLists.txt  analyzerModule.cpp  analyzerObjectBuilder.cpp  analyzerObjectBuilder.hpp  errorUtils.hpp  internationalization.cpp  internationalization.cpp.in  libstrus_module.cpp  modstrus_analyzer_pattern_test.cpp  moduleAnalyzer.cpp  moduleDirectory.hpp  moduleDirectory.hpp.in  moduleEntryPoint.cpp  moduleLoader.cpp  moduleLoader.hpp  moduleStorage.cpp  objectBuilder.cpp  objectBuilder.hpp  storageModule.cpp  storageObjectBuilder.cpp  storageObjectBuilder.hpp  strusModuleInfo.cpp  traceModule.cpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt
tests/loader/: CMakeLists.txt  testModuleDirectory.hpp  testModuleDirectory.hpp.in  testModuleLoader.cpp
tests/modules/: CMakeLists.txt  modstrus_normalizer_snowball.cpp
